--- a/19001395_VentaCelulares_CC5_API/19001395_VentaCelulares_CC5_API.csproj
+++ b/19001395_VentaCelulares_CC5_API/19001395_VentaCelulares_CC5_API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,5 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>_19001395_VentaCelulares_CC5_API</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.18.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
 
 </Project>
