--- a/19001395_VentaCelulares_CC5_API/Properties/launchSettings.json
+++ b/19001395_VentaCelulares_CC5_API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7178;http://localhost:5178",
+      "applicationUrl": "http://localhost:5178",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
