--- a/19001395_VentaCelulares_CC5_API/appsettings.json
+++ b/19001395_VentaCelulares_CC5_API/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Default": "server=127.0.0.1;database=VentaCelulares_19001395_DB_CC5;uid=root;pwd=root"
+    },
+    "Jwt": {
+        "Key": "7AC3MpeatAKF7JnSSSi0zwPXDGIUYeoQSi0HYx7JNyQjPW6umI",
+        "Issuer": "http://localhost:5178",
+        "Audience": "http://localhost:4200"
     }
-  },
-  "AllowedHosts": "*"
 }
