feat: Finish Usecases and repositories

--- a/19001395_VentaCelulares_CC5_API/19001395_VentaCelulares_CC5_API.csproj
+++ b/19001395_VentaCelulares_CC5_API/19001395_VentaCelulares_CC5_API.csproj
@@ -15,9 +15,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BillingReport\BillingReport.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Endpoint\Factura\" />
   </ItemGroup>
 
 </Project>
