--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="DbDataReaderMapper" Version="1.1.0" />
+    <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.29" />
   </ItemGroup>
